# docs/swagger.json
@@ -36,6 +36,12 @@
                     }
                 ],
                 "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/main.ContributionPost"
+                        }
+                    },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
@@ -149,6 +155,12 @@
                     }
                 ],
                 "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/main.InfinityBottlePost"
+                        }
+                    },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
